# uart_serial_plotter

./: .gitignore  LICENSE  README.md  list_serial_ports.py  log_encoder_updates_220s_mountain.txt  main.py  main_csv.py  main_window.py  menubar.py  pager.py  pages.py  plot.py  requirements.txt  resource.py  setup.cfg  tabs.py  toolbar.py  usb_device_listener_linux.py
src/: list_serial_ports.py  main.py  main_window.py  pages.py  plot.py  resource.py  uart_serial_plotter.spec  usb_device_listener_windows.py
src/uart_serial_plotter/: action.py  main.py  main_window.py  menubar.py  pager.py  pages.py  plot.py  tabs.py  toolbar.py
