[metadata]
# replace with your username:
name = uart_serial_plotter
version = 1.0.0
author = Pranav Srinivas Kumar
author_email = pranav.srinivas.kumar@gmail.com
description = UART Serial Plotter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/appliedinnovation/uart_serial_plotter
project_urls =
    Bug Tracker = https://github.com/appliedinnovation/uart_serial_plotter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    PyQt5
    pyqtgraph
    pyserial
    pywin32

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uart_serial_plotter = main:main